# ElectoralRedistricting

./: .gitignore  LICENSE  README.md  pyproject.toml  run.py  setup.py
configs/: runtest.json  sample.json  test.json
data/: sample.geojson  sample_graph.json
outputs/districts/chain_out/: sample_chain.jsonl
outputs/districts/kansas_dev_run_chain_out/: kansas_dev_run_5_districts.jsonl
outputs/settings/5/: sample_vk_sample_settings_district_plan_000_district_00.json  sample_vk_sample_settings_district_plan_000_district_01.json  sample_vk_sample_settings_district_plan_000_district_02.json  sample_vk_sample_settings_district_plan_000_district_03.json  sample_vk_sample_settings_district_plan_000_district_04.json  sample_vk_sample_settings_district_plan_200_district_00.json  sample_vk_sample_settings_district_plan_200_district_01.json  sample_vk_sample_settings_district_plan_200_district_02.json  sample_vk_sample_settings_district_plan_200_district_03.json  sample_vk_sample_settings_district_plan_200_district_04.json  sample_vk_sample_settings_district_plan_400_district_00.json  sample_vk_sample_settings_district_plan_400_district_01.json  sample_vk_sample_settings_district_plan_400_district_02.json  sample_vk_sample_settings_district_plan_400_district_03.json  (+11 more)
pipeline/: 02_settings_generator.py  03_profile_generator.py  04_simulate_elections.py  05_summarize_results.py  district_generator.py  profile_generator.py  settings_generator.py  simulate_elections.py  summarize_results.py
pipeline/utils/: helpers.py
(+150 files in other folders)
