[project]
name = "ca-stv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fiona>=1.10.1",
    "gerrychain[geo]>=0.3.2",
    "ipykernel>=7.0.1",
    "ipywidgets>=8.1.7",
    "joblib>=1.5.2",
    "joblib-progress>=1.0.6",
    "jsonlines>=4.0.0",
    "pandas>=2.3.3",
    "tqdm>=4.67.1",
    "votekit>=3.3.0",
]
